added scala project